welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:9: error: type mismatch;
 found   : Unit
 required: Int
    else if (speed>80) {
         ^caughtSpeeding:20: error: type mismatch;
 found   : Unit
 required: Int
    else if (speed>85) {
         ^